Added View Signers fucntionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,12 +10,16 @@
 
 <a href="/signup">Sign Up</a>
 
+<p>or create a petition</p>
+
+<a href="/create-petition">Create a Petition</a>
+
 <p>Or, you can browse and sign petitions:</p>
 
 <a href="/list-petitions">Browse Petitions</a>
 
 <form action="/search-petitions" method="get">
-    <input type="text" name="keyword" placeholder="Search Petitions">
+    <input type="text" name="query" placeholder="Search Petitions">
     <button type="submit">Search</button>
 </form>
 </body>
