removing unneccessary code and refining tests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,16 +8,17 @@
 <h1>Welcome to Our Petition Platform</h1>
 <p>Explore and sign petitions created by the community.</p>
 
-<a href="/signup">Sign Up</a>
 
-<p>or create a petition</p>
+
+<h2>do you want to create a petition?</h2>
 
 <a href="/create-petition">Create a Petition</a>
 
-<p>Or, you can browse and sign petitions:</p>
+<h2>Do you want to list all petitions currently available?</h2>
 
 <a href="/list-petitions">Browse Petitions</a>
 
+<h2>or Do you want to search for a petition?</h2>
 <form action="/search-petitions" method="get">
     <input type="text" name="query" placeholder="Search Petitions">
     <button type="submit">Search</button>
