--- a/src/main/resources/templates/list-petitions.html
+++ b/src/main/resources/templates/list-petitions.html
@@ -6,11 +6,6 @@
 </head>
 <body>
 <h1>List of Petitions</h1>
-<!-- Display user information if available -->
-<div th:if="${user != null}">
-    <p>Welcome, <span th:text="${user.firstName}"></span>!</p>
-    <p>Email: <span th:text="${user.email}"></span></p>
-</div>
 
 <table border="1">
     <thead>
@@ -41,6 +36,11 @@
     </tbody>
 </table>
 
+<h2>if you want to search for a particular petition please enter your query here</h2>
+<form action="/search-petitions" method="get">
+    <input type="text" name="query" placeholder="Search Petitions">
+    <button type="submit">Search</button>
+</form>
 <a href="/">Back to Home</a>
 </body>
 </html>
