--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Thank You</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thank You - Bootstrap v5</title>
+  <link href="https://cdn.jsdelivr.net/bootstrap/2.3.2/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<h1>Thank You!</h1>
-<p>Your sign-up or petition signing was successful.</p>
-<a href="/">Return to Home</a>
+<div class="container">
+  <header class="page-header">
+    <h1>Thank You</h1>
+  </header>
+
+  <nav>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/list-petitions">List Petitions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/create-petition">Create Petition</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search-petitions">Search Petition</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="alert alert-success" role="alert">
+    <h3>Thank you for your support!</h3>
+    <p>Your signature has been recorded.</p>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/jquery/1.7.2/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
