changing html nav bar to active

--- a/src/main/resources/templates/list-petitions.html
+++ b/src/main/resources/templates/list-petitions.html
@@ -15,18 +15,12 @@
 
     <nav>
         <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="/list-petitions">List Petitions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/create-petition">Create Petition</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/search-petitions">Search Petition</a>
-            </li>
+            <ul class="nav nav-pills">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="/list-petitions">List Petitions</a></li>
+                <li><a href="/create-petition">Create Petition</a></li>
+                <li><a href="/search-petitions">Search Petition</a></li>
+            </ul>
         </ul>
     </nav>
 
