--- a/src/main/resources/templates/search-petitions.html
+++ b/src/main/resources/templates/search-petitions.html
@@ -14,18 +14,10 @@
 
     <nav>
         <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/list-petitions">List Petitions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/create-petition">Create Petition</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/search-petitions">Search Petition</a>
-            </li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/list-petitions">List Petitions</a></li>
+            <li><a href="/create-petition">Create Petition</a></li>
+            <li><a href="/search-petitions">Search Petition</a></li>
         </ul>
     </nav>
 
