--- a/src/main/resources/templates/list-petitions.html
+++ b/src/main/resources/templates/list-petitions.html
@@ -25,6 +25,7 @@
     </nav>
 
     <h2>Petitions List</h2>
+    <div class="table-container">
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -56,6 +57,7 @@
 
         </tbody>
     </table>
+        </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/jquery/1.7.2/jquery.min.js"></script>
