--- a/src/main/resources/templates/search-petitions.html
+++ b/src/main/resources/templates/search-petitions.html
@@ -32,6 +32,7 @@
 
     <!-- Display Search Results -->
     <h3>Search Results</h3>
+    <div class="table-container">
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -62,6 +63,7 @@
         </tr>
         </tbody>
     </table>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/jquery/1.7.2/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/bootstrap/2.3.2/js/bootstrap.min.js"></script>
