--- a/src/main/resources/templates/view-signers.html
+++ b/src/main/resources/templates/view-signers.html
@@ -22,6 +22,7 @@
     </nav>
 
     <h2>List of Signers</h2>
+    <div class="table-container">
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -43,6 +44,7 @@
 
         </tbody>
     </table>
+        </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/jquery/1.7.2/jquery.min.js"></script>
