updating table layout to responsive

--- a/src/main/resources/templates/list-petitions.html
+++ b/src/main/resources/templates/list-petitions.html
@@ -25,7 +25,7 @@
     </nav>
 
     <h2>Petitions List</h2>
-    <div class="table-container">
+    <div class="table-responsive">
     <table class="table table-bordered">
         <thead>
         <tr>
