--- a/src/main/resources/templates/view-signers.html
+++ b/src/main/resources/templates/view-signers.html
@@ -22,7 +22,7 @@
     </nav>
 
     <h2>List of Signers</h2>
-    <div class="table-container">
+    <div class="table-responsive">
     <table class="table table-bordered">
         <thead>
         <tr>
