--- a/src/main/resources/templates/search-petitions.html
+++ b/src/main/resources/templates/search-petitions.html
@@ -32,7 +32,7 @@
 
     <!-- Display Search Results -->
     <h3>Search Results</h3>
-    <div class="table-container">
+    <div class="table-responsive">
     <table class="table table-bordered">
         <thead>
         <tr>
