adding footer to all html files

--- a/src/main/resources/templates/sign-petition-form.html
+++ b/src/main/resources/templates/sign-petition-form.html
@@ -45,6 +45,14 @@
         <button type="submit" class="btn btn-success">Sign Petition</button>
     </form>
 </div>
-
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>&copy; 2023 JMCCABE Student University of Galway. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
