--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -29,5 +29,14 @@
 
 <script src="https://cdn.jsdelivr.net/jquery/1.7.2/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <p>&copy; 2023 JMCCABE Student University of Galway. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
