--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -14,7 +14,7 @@
 
   <nav>
     <ul class="nav nav-pills">
-      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="/list-petitions">List Petitions</a></li>
       <li><a href="/create-petition">Create Petition</a></li>
       <li><a href="/search-petitions">Search Petition</a></li>
