update html home page links

--- a/src/main/resources/templates/list-petitions.html
+++ b/src/main/resources/templates/list-petitions.html
@@ -30,7 +30,7 @@
     <nav>
         <ul class="nav nav-pills">
             <ul class="nav nav-pills">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/list-petitions">List Petitions</a></li>
                 <li><a href="/create-petition">Create Petition</a></li>
                 <li><a href="/search-petitions">Search Petition</a></li>
