--- a/src/main/resources/templates/create-petition.html
+++ b/src/main/resources/templates/create-petition.html
@@ -28,7 +28,7 @@
 
     <nav>
         <ul class="nav nav-pills">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/list-petitions">List Petitions</a></li>
             <li><a href="/create-petition">Create Petition</a></li>
             <li><a href="/search-petitions">Search Petition</a></li>
