--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,6 +40,7 @@
         <div class="span12">
             <h2>Welcome to our Petition Platform</h2>
             <p>Explore and sign petitions created by the community.</p>
+            <p>Update to container</p>
         </div>
     </div>
 </div>
