--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
         <div class="span12">
             <h2>Welcome to our Petition Platform</h2>
             <p>Explore and sign petitions created by the community.</p>
-            <p style="color: darkred">I turn blue</p>
+            <p style="color: blue">I turn blue</p>
         </div>
     </div>
 </div>
